fixed spacing

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -19,6 +19,7 @@ body {
 }
 
 .sw {
+  display: block;
 	text-align: center;
 }
 
